--- a/products-common/pom.xml
+++ b/products-common/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>products-common</artifactId>
+    <name>Products - Common</name>
     <packaging>jar</packaging>
 
     <properties>
