--- a/products-persistence/pom.xml
+++ b/products-persistence/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>products-persistence</artifactId>
+    <name>Products - Persistence</name>
     <packaging>jar</packaging>
 
     <properties>
