--- a/products-api/pom.xml
+++ b/products-api/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>products-api</artifactId>
+    <name>Products - API</name>
     <packaging>jar</packaging>
 
     <properties>
