--- a/products-core/pom.xml
+++ b/products-core/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>products-core</artifactId>
+    <name>Products - Core</name>
     <packaging>jar</packaging>
 
     <properties>
